Service basic구현 및 오타 수정 및 메인 작성