@@ -6,7 +6,6 @@ import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
 @Repository
@@ -29,8 +28,15 @@ public class JCFUserRepository implements UserRepository {
     }
 
     @Override
-    public Optional<User> findByUsername(String userName) {
-        return data.values().stream().collect(Collectors.toList());-0
+    public Optional<User> findByUsername(String username) {
+        return this.findAll().stream()
+                .filter(user -> user.getUserName().equals(username))
+                .findFirst();
+    }
+
+    @Override
+    public List<User> findAll() {
+        return this.data.values().stream().toList();
     }
 
     @Override
@@ -39,12 +45,17 @@ public class JCFUserRepository implements UserRepository {
     }
 
     @Override
+    public void deleteById(UUID id) {
+        this.data.remove(id);
+    }
+
+    @Override
     public boolean existsByEmail(String email) {
         return this.findAll().stream().anyMatch(user -> user.getEmail().equals(email));
     }
 
     @Override
-    public boolean existsByUsername(String userName) {
-        return this.findAll().stream().anyMatch(user -> user.getUserName().equals(userName));
+    public boolean existsByUsername(String username) {
+        return this.findAll().stream().anyMatch(user -> user.getUserName().equals(username));
     }
 }
